syntax = "proto3";
package ink.pmc.framework.bridge.proto;

import "bridge/LocationInfo.proto";

message PlayerInfo {
  string server = 1;
  string unique_id = 2;
  string name = 3;
  LocationInfo location = 4;
}