syntax = "proto3";
package ink.pmc.framework.bridge.proto;

message WorldInfo {
  string server = 1;
  string name = 2;
}